--- a/sass/_page-index.scss
+++ b/sass/_page-index.scss
@@ -57,13 +57,14 @@ header {
 }
 
 #concept-row {
-	margin: 40px 0;
+	margin: 0;
 	width: 100%;
 	height: auto;
 	overflow: hidden;
 }
 
 .concept {
+	margin-top: 20px;
 	background: #EEE;
 	@include transition(all .5s);
 	p {
@@ -260,6 +261,14 @@ footer {
 			margin-bottom: 40px;	
 			padding: 0;
 		}
+	}
+
+	#concept-row {
+		margin: 40px 0;
+	}
+
+	.concept {
+		margin-top: 0px;
 	}
 
 	.map-location {
